# docs/swagger.yaml
@@ -77,6 +77,8 @@ definitions:
         type: integer
       name:
         type: string
+      productCount:
+        type: integer
       updatedAt:
         type: string
     type: object
@@ -239,6 +241,27 @@ paths:
       consumes:
       - application/json
       description: Get a list of all categories
+      parameters:
+      - description: Page number
+        in: query
+        name: page
+        type: integer
+      - description: Number of items per page
+        in: query
+        name: pageSize
+        type: integer
+      - description: Search term
+        in: query
+        name: search
+        type: string
+      - description: Sort by field
+        in: query
+        name: sortBy
+        type: string
+      - description: Sort order (DESC or ASC)
+        in: query
+        name: sortOrder
+        type: string
       produces:
       - application/json
       responses:
