# internal/handler/response/category.go
@@ -7,10 +7,11 @@ import (
 )
 
 type CategoryResponse struct {
-	ID        uint      `json:"id"`
-	Name      string    `json:"name"`
-	CreatedAt time.Time `json:"createdAt"`
-	UpdatedAt time.Time `json:"updatedAt"`
+	ID           uint      `json:"id"`
+	Name         string    `json:"name"`
+	CreatedAt    time.Time `json:"createdAt"`
+	UpdatedAt    time.Time `json:"updatedAt"`
+	ProductCount int       `json:"productCount"`
 }
 
 type ProductCategoryResponse struct {
@@ -18,11 +19,17 @@ type ProductCategoryResponse struct {
 	Name string `json:"name"`
 }
 
+type CategoryListResponse struct {
+	Data       []CategoryResponse `json:"data"`
+	Pagination PaginationResponse `json:"pagination"`
+}
+
 func NewCategoryResponse(category model.Category) CategoryResponse {
 	return CategoryResponse{
-		ID:        category.ID,
-		Name:      category.Name,
-		CreatedAt: category.CreatedAt,
-		UpdatedAt: category.UpdatedAt,
+		ID:           category.ID,
+		Name:         category.Name,
+		CreatedAt:    category.CreatedAt,
+		UpdatedAt:    category.UpdatedAt,
+		ProductCount: category.ProductCount,
 	}
 }
