# internal/model/category_filter.go
@@ -1,0 +1,8 @@
+package model
+
+type CategoryFilter struct {
+	Pagination Pagination
+	Search     string
+	SortBy     string
+	SortOrder  string
+}
